<resources>
    <string name="app_name">Getactive</string>
    <string name="pass_hint">Password..</string>
    <string name="email_hint">Your Email..</string>
    <string name="login_logo_descc">Login Logo</string>
    <string name="login_button_text">Login To Account</string>
    <string name="login_reg_btn_text">Need A New Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Setting</string>
    <string name="action_logout_text">Logout</string>
    <string name="action_settings_text">Account Settings</string>
    <string name="reg_btn_text">Create New Account</string>
    <string name="reg_login_btn">Already have an Account?</string>
    <string name="reg_pass_text">Password..</string>
    <string name="reg_confirm_pass_text">Confirm password...</string>
    <string name="setup_hint_name">Your Name</string>
    <string name="setuphintname">Your Name..</string>
    <string name="setup_btn_name">Save Account Setting</string>
    <string name="post_desc_hint">Add Post Description</string>
    <string name="postbtnhint">Post Blog</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_account_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
